# ball-plate

./: README.md  ball-plate.code-workspace  pyproject.toml
firmware/260530-200235-esp32dev/: platformio.ini
firmware/260530-200235-esp32dev/scratch/: ServoCalibration.cpp
firmware/260530-200235-esp32dev/src/: SerialStateTest.cpp  main.cpp
firmware/ServoCalibration/: ServoCalibration.ino
firmware/controller/: controller.ino
src/ball_plate/: __init__.py  ball_tracker_v2.py  cam_tools.py  config.py  control.py  estimator.py  main.py  perception.py  serial_io.py  state.py
