[project]
name = "ball-plate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josh McConkie", email = "joshuamcconkie@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "serial>=0.0.97",
]

[project.scripts]
ball-plate = "ball_plate:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
